skiplang/compiler/invalid_tests/typechecking/untracked_pipe.sk
// it's an error to pipe into an untracked function from a tracked context
untracked fun f(x: String): String {
  x
}

fun main(): void {
  print_raw("Fail\n" |> f)
}
